opinion section alignment issue fixed and again commit done

--- a/styles/bangladesh2.0.css
+++ b/styles/bangladesh2.0.css
@@ -57,7 +57,7 @@
 /* common styles end*/
 
 body {
-  background-color: #f1f1f3;
+  background-color: #f5f5f5;
 }
 
 /* nav styles start */
@@ -196,8 +196,13 @@ i {
 }
 
 /* Opinion styles start */
+#opinion_table_container {
+  background-color: #ffffff;
+  padding: 32px;
+  border-radius: 16px;
+}
 #opinion_table_container table {
-  max-width: 1280px;
+  width: 1280px;
 }
 #opinion_table_container table td {
   border: 2px solid black;
